--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,14 @@
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+BUILD_TOOLS_VERSION=23.0.0
+COMPILE_SDK_VERSION=23
+CURRENT_SDK_VERSION=20
+EDGE_SDK_VERSION=23
+LEGACY_SDK_VERSION=13
+MIN_SDK_VERSION=9
+SUPPORT_SDK_VERSION=16
+TARGET_SDK_VERSION=23
+VERSION_CODE=1
+VERSION_NAME=1.0
 org.gradle.parallel=true
