--- a/tv/src/main/AndroidManifest.xml
+++ b/tv/src/main/AndroidManifest.xml
@@ -1,37 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.stintmint" >
+<manifest
+  package="com.stintmint"
+  xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
-    <uses-feature
-        android:name="android.hardware.touchscreen"
-        android:required="false" />
-    <uses-feature
-        android:name="android.software.leanback"
-        android:required="true" />
+  <uses-feature
+    android:name="android.hardware.touchscreen"
+    android:required="false"/>
+  <uses-feature
+    android:name="android.software.leanback"
+    android:required="true"/>
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/Theme.Leanback" >
-        <activity
-            android:name=".MainActivity"
-            android:icon="@drawable/app_icon_your_company"
-            android:label="@string/app_name"
-            android:logo="@drawable/app_icon_your_company"
-            android:screenOrientation="landscape" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+  <application
+    android:allowBackup="true"
+    android:fullBackupContent="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:theme="@style/Theme.Leanback">
+    <activity
+      android:name=".MainActivity"
+      android:icon="@drawable/app_icon_your_company"
+      android:label="@string/app_name"
+      android:logo="@drawable/app_icon_your_company"
+      android:screenOrientation="landscape">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".DetailsActivity" />
-        <activity android:name=".PlaybackOverlayActivity" />
-        <activity android:name=".BrowseErrorActivity" />
-    </application>
+        <category android:name="android.intent.category.LEANBACK_LAUNCHER"/>
+      </intent-filter>
+    </activity>
+    <activity android:name=".DetailsActivity"/>
+    <activity android:name=".PlaybackOverlayActivity"/>
+    <activity android:name=".BrowseErrorActivity"/>
+
+    <meta-data
+      android:name="io.fabric.ApiKey"
+      android:value="1f64cca0f97c0261f093ca34987001e48d150fc2"/>
+    <meta-data
+      android:name="com.crashlytics.ApiKey"
+      android:value="1f64cca0f97c0261f093ca34987001e48d150fc2"/>
+  </application>
 
 </manifest>
