--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,20 @@ buildscript {
   repositories {
     jcenter()
     mavenCentral()
+    maven { url 'https://maven.fabric.io/public' }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:1.3.1'
     classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
+    classpath 'io.fabric.tools:gradle:1.19.2'
   }
 }
 
 allprojects {
   repositories {
     jcenter()
+    mavenCentral()
+    maven { url 'https://maven.fabric.io/public' }
   }
 }
