--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,27 +1,57 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.jakewharton.hugo'
+apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'io.fabric'
+apply plugin: 'idea'
+apply plugin: 'checkstyle'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.0"
+  compileSdkVersion Integer.parseInt(project.COMPILE_SDK_VERSION)
+  buildToolsVersion project.BUILD_TOOLS_VERSION
 
-    defaultConfig {
-        applicationId "com.stintmint"
-        minSdkVersion 20
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+  defaultConfig {
+    applicationId "com.stintmint"
+    minSdkVersion 20
+    targetSdkVersion Integer.parseInt(project.TARGET_SDK_VERSION)
+    versionCode Integer.parseInt(project.VERSION_CODE)
+    versionName project.VERSION_CODE
+
+    buildConfigField "String", "PARSE_KEY", "\"WUHyirx5U73etKmHApaglKUkqaxpMtTgvvqoVh0c\""
+    buildConfigField "String", "PARSE_TOKEN", "\"YzkWXpZaTrgmyNJ37A2oZ7MzojEgSisiBggtqMxl\""
+    buildConfigField "String", "TWITTER_KEY", "\"BAEJBTDRh1dFQYejH8Rpc2Ws9\""
+    buildConfigField "String", "TWITTER_SECRET", "\"z3Sc3ZZgPlWsTi1kk5mql3dyzwppoYyQXT8k41ufsCiqVbxoln\""
+  }
+
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+  }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.support:wearable:1.3.0'
-    compile 'com.google.android.gms:play-services-wearable:7.8.0'
+  compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile 'com.google.android.support:wearable:1.3.0'
+  compile 'com.google.android.gms:play-services-wearable:7.8.0'
+
+  compile 'com.parse:parse-android:1.10.1'
+  compile 'com.facebook.android:facebook-android-sdk:4.5.0'
+  compile 'com.squareup.retrofit:retrofit:1.9.0'
+  compile 'com.squareup.picasso:picasso:2.5.2'
+  compile 'com.jakewharton:butterknife:7.0.1'
+
+  compile "org.parceler:parceler-api:1.0.3"
+  apt "org.parceler:parceler:1.0.3"
+
+  compile 'com.sora.util.akatsuki:akatsuki-api:0.0.1'
+  apt 'com.sora.util.akatsuki:akatsuki-compiler:0.0.1'
+  compile 'com.sora.util.akatsuki:akatsuki-parceler:0.0.1@aar'
+
+  debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+  releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+
+  compile group: 'com.crashlytics.sdk.android', name: 'crashlytics', version: '2.5.1', ext: 'aar', transitive: true
+  compile group: 'com.twitter.sdk.android', name: 'twitter', version: '1.7.2', ext: 'aar', transitive: true
+  compile group: 'com.digits.sdk.android', name: 'digits', version: '1.7.2', ext: 'aar', transitive: true
 }
