--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
     classpath 'io.fabric.tools:gradle:1.19.2'
+    classpath 'com.google.gms:google-services:1.3.0-beta1'
   }
 }
 
