--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -3,30 +3,103 @@
   package="com.stintmint"
   xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <uses-permission android:name="android.permission.INTERNET"/>
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
 
-  <application
-    android:name=".MainApplication"
-    android:allowBackup="true"
-    android:fullBackupContent="true"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:theme="@style/AppTheme">
-    <activity
-      android:name=".MainActivity"
-      android:label="@string/app_name">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
+    <permission
+      android:name="con.stintmint.permission.C2D_MESSAGE"
+      android:protectionLevel="signature"/>
 
-    <meta-data
-      android:name="io.fabric.ApiKey"
-      android:value="1f64cca0f97c0261f093ca34987001e48d150fc2"/>
-    <meta-data
-      android:name="com.crashlytics.ApiKey"
-      android:value="1f64cca0f97c0261f093ca34987001e48d150fc2"/>
-  </application>
+    <uses-permission android:name="con.stintmint.permission.C2D_MESSAGE"/>
+    <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_PROFILE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <!--
+ The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but are recommended.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+    <application
+      android:name=".MainApplication"
+      android:allowBackup="true"
+      android:fullBackupContent="true"
+      android:icon="@mipmap/ic_launcher"
+      android:label="@string/app_name"
+      android:theme="@style/AppTheme">
+        <activity
+          android:name=".ui.MainActivity"
+          android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
+        <meta-data
+          android:name="io.fabric.ApiKey"
+          android:value="1f64cca0f97c0261f093ca34987001e48d150fc2"/>
+        <meta-data
+          android:name="com.crashlytics.ApiKey"
+          android:value="1f64cca0f97c0261f093ca34987001e48d150fc2"/>
+
+        <receiver
+          android:name="com.google.android.gms.gcm.GcmReceiver"
+          android:exported="true"
+          android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION"/>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+
+                <category android:name="com.stintmint.gcm"/>
+            </intent-filter>
+        </receiver>
+
+        <service
+          android:name=".depend.GcmListenerService"
+          android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+            </intent-filter>
+        </service>
+        <service
+          android:name=".depend.InstanceIdListenerService"
+          android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.iid.InstanceID"/>
+            </intent-filter>
+        </service>
+
+        <activity
+          android:name=".ui.LoginActivity"
+          android:label="@string/title_activity_login"
+          android:windowSoftInputMode="adjustResize|stateHidden">
+        </activity>
+
+        <meta-data
+          android:name="com.google.android.gms.version"
+          android:value="@integer/google_play_services_version"/>
+        <meta-data
+          android:name="com.google.android.maps.v2.API_KEY"
+          android:value="@string/google_maps_key"/>
+
+        <activity
+          android:name=".ui.MapsActivity"
+          android:label="@string/title_activity_maps">
+        </activity>
+
+        <receiver
+          android:name=".debug.BroadcastReceiver"
+          android:enabled="true"
+          android:exported="true">
+        </receiver>
+    </application>
+
 </manifest>
