--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'io.fabric'
 apply plugin: 'idea'
 apply plugin: 'checkstyle'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-android'
 
 android {
   compileSdkVersion Integer.parseInt(project.COMPILE_SDK_VERSION)
@@ -77,6 +78,10 @@ android {
       applicationIdSuffix '.debug'
     }
   }
+
+  sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
+  }
 }
 
 dependencies {
@@ -104,6 +109,7 @@ dependencies {
   compile 'com.google.android.gms:play-services-location:7.8.0'
   compile 'com.google.android.gms:play-services-maps:7.8.0'
 
+  compile 'org.jetbrains.kotlin:kotlin-stdlib:0.12.613'
   compile 'com.parse:parse-android:1.10.1'
   compile 'com.facebook.android:facebook-android-sdk:4.5.0'
   compile 'com.squareup.retrofit:retrofit:1.9.0'
