--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -18,6 +18,9 @@ android {
     versionCode Integer.parseInt(project.VERSION_CODE)
     versionName project.VERSION_CODE
 
+    renderscriptTargetApi 23
+    renderscriptSupportModeEnabled true
+
     buildConfigField "String", "PARSE_APP_ID", "\"WUHyirx5U73etKmHApaglKUkqaxpMtTgvvqoVh0c\""
     buildConfigField "String", "PARSE_API_KEY", "\"YzkWXpZaTrgmyNJ37A2oZ7MzojEgSisiBggtqMxl\""
     buildConfigField "String", "TWITTER_KEY", "\"BAEJBTDRh1dFQYejH8Rpc2Ws9\""
@@ -96,6 +99,7 @@ dependencies {
   compile group: 'com.digits.sdk.android', name: 'digits', version: '1.7.2', ext: 'aar', transitive: true
 
   compile 'com.android.support:appcompat-v7:23.0.0'
+  compile 'com.android.support:cardview-v7:23.0.0'
   compile 'com.android.support:design:23.0.0'
   compile 'com.android.support:recyclerview-v7:23.0.0'
   compile 'com.android.support:support-v4:23.0.0'
@@ -121,4 +125,7 @@ dependencies {
   compile 'com.sora.util.akatsuki:akatsuki-parceler:0.0.1@aar'
   compile 'com.sora.util.akatsuki:akatsuki-api:0.0.1'
   apt 'com.sora.util.akatsuki:akatsuki-compiler:0.0.1'
+
+  compile 'com.github.bumptech.glide:glide:3.6.0'
+  compile 'de.hdodenhof:circleimageview:1.3.0'
 }
