--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,97 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-  package="com.stintmint"
-  xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.stintmint">
 
-  <permission
-    android:name="con.stintmint.permission.C2D_MESSAGE"
-    android:protectionLevel="signature"/>
+    <permission
+      android:name="con.stintmint.permission.C2D_MESSAGE"
+      android:protectionLevel="signature"/>
 
-  <uses-permission android:name="android.permission.INTERNET"/>
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-  <uses-permission android:name="android.permission.WAKE_LOCK"/>
-  <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
-  <uses-permission android:name="con.stintmint.permission.C2D_MESSAGE"/>
-  <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
-  <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-  <uses-permission android:name="android.permission.READ_PROFILE"/>
-  <uses-permission android:name="android.permission.READ_CONTACTS"/>
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-  <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
+    <uses-permission android:name="con.stintmint.permission.C2D_MESSAGE"/>
+    <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_PROFILE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
-  <application
-    android:name=".MainApplication"
-    android:allowBackup="true"
-    android:fullBackupContent="true"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:theme="@style/AppTheme">
-    <activity
-      android:name=".ui.MainActivity"
-      android:label="@string/app_name">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
+    <application
+      android:name=".MainApplication"
+      android:allowBackup="true"
+      android:fullBackupContent="true"
+      android:icon="@mipmap/ic_launcher"
+      android:label="@string/app_name"
+      android:theme="@style/AppTheme">
+        <activity
+          android:name=".ui.MainActivity"
+          android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
-    <activity
-      android:name=".ui.MapsActivity"
-      android:label="@string/title_activity_maps"/>
-    <activity
-      android:name=".ui.LoginActivity"
-      android:label="@string/title_activity_login"/>
-    <activity
-      android:name=".ui.SignUpActivity"
-      android:label="@string/title_activity_sign_up"
-      android:parentActivityName=".ui.LoginActivity"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity
+          android:name=".ui.MapsActivity"
+          android:label="@string/title_activity_maps"/>
+        <activity
+          android:name=".ui.LoginActivity"
+          android:label="@string/title_activity_login"/>
+        <activity
+          android:name=".ui.SignUpActivity"
+          android:label="@string/title_activity_sign_up"
+          android:parentActivityName=".ui.LoginActivity"/>
 
-    <receiver
-      android:name="com.google.android.gms.gcm.GcmReceiver"
-      android:exported="true"
-      android:permission="com.google.android.c2dm.permission.SEND">
-      <intent-filter>
-        <action android:name="com.google.android.c2dm.intent.REGISTRATION"/>
-        <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+        <receiver
+          android:name="com.google.android.gms.gcm.GcmReceiver"
+          android:exported="true"
+          android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION"/>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
 
-        <category android:name="com.stintmint.gcm"/>
-      </intent-filter>
-    </receiver>
-    <receiver
-      android:name=".depend.MainBroadcastReceiver"
-      android:enabled="true"
-      android:exported="true"/>
+                <category android:name="com.stintmint.gcm"/>
+            </intent-filter>
+        </receiver>
+        <receiver
+          android:name=".depend.MainBroadcastReceiver"
+          android:enabled="true"
+          android:exported="true"/>
 
-    <service
-      android:name=".depend.GcmListenerService"
-      android:exported="false">
-      <intent-filter>
-        <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
-      </intent-filter>
-    </service>
-    <service
-      android:name=".depend.InstanceIdListenerService"
-      android:exported="false">
-      <intent-filter>
-        <action android:name="com.google.android.gms.iid.InstanceID"/>
-      </intent-filter>
-    </service>
+        <service
+          android:name=".depend.GcmListenerService"
+          android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+            </intent-filter>
+        </service>
+        <service
+          android:name=".depend.InstanceIdListenerService"
+          android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.iid.InstanceID"/>
+            </intent-filter>
+        </service>
 
-    <meta-data
-      android:name="com.google.android.gms.version"
-      android:value="@integer/google_play_services_version"/>
-    <meta-data
-      android:name="com.google.android.maps.v2.API_KEY"
-      android:value="@string/google_maps_key"/>
-    <meta-data
-      android:name="io.fabric.ApiKey"
-      android:value="1f64cca0f97c0261f093ca34987001e48d150fc2"/>
-    <meta-data
-      android:name="com.crashlytics.ApiKey"
-      android:value="1f64cca0f97c0261f093ca34987001e48d150fc2"/>
+        <meta-data
+          android:name="com.google.android.gms.version"
+          android:value="@integer/google_play_services_version"/>
+        <meta-data
+          android:name="com.google.android.maps.v2.API_KEY"
+          android:value="@string/google_maps_key"/>
+        <meta-data
+          android:name="io.fabric.ApiKey"
+          android:value="1f64cca0f97c0261f093ca34987001e48d150fc2"/>
+        <meta-data
+          android:name="com.crashlytics.ApiKey"
+          android:value="1f64cca0f97c0261f093ca34987001e48d150fc2"/>
 
-  </application>
+        <activity
+          android:name=".ui.StintActivity"
+          android:label="@string/title_activity_stint">
+        </activity>
+    </application>
 
 </manifest>
