Added Search Toolbar

--- a/build.gradle
+++ b/build.gradle
@@ -21,5 +21,6 @@ allprojects {
     jcenter()
     mavenCentral()
     maven { url 'https://maven.fabric.io/public' }
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
   }
 }
