--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -40,12 +40,12 @@
           android:name=".ui.MapsActivity"
           android:label="@string/title_activity_maps"/>
         <activity
-          android:name=".ui.LoginActivity"
+          android:name=".ui.auth.LoginActivity"
           android:label="@string/title_activity_login"/>
         <activity
-          android:name=".ui.SignUpActivity"
+          android:name=".ui.auth.SignUpActivity"
           android:label="@string/title_activity_sign_up"
-          android:parentActivityName=".ui.LoginActivity"/>
+          android:parentActivityName=".ui.auth.LoginActivity"/>
 
         <receiver
           android:name="com.google.android.gms.gcm.GcmReceiver"
@@ -91,10 +91,6 @@
           android:name="com.crashlytics.ApiKey"
           android:value="1f64cca0f97c0261f093ca34987001e48d150fc2"/>
 
-        <activity
-          android:name=".ui.StintActivity"
-          android:label="@string/title_activity_stint">
-        </activity>
     </application>
 
 </manifest>
