--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -1,18 +1,17 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.hugo'
-apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'io.fabric'
 apply plugin: 'idea'
 apply plugin: 'checkstyle'
 
 android {
-  compileSdkVersion Integer.parseInt(project.COMPILE_SDK_VERSION)
-  buildToolsVersion project.BUILD_TOOLS_VERSION
+  compileSdkVersion Integer.parseInt(project.COMPILE_SDK)
+  buildToolsVersion project.BUILD_TOOLS
 
   defaultConfig {
     applicationId "com.stintmint"
     minSdkVersion 21
-    targetSdkVersion Integer.parseInt(project.TARGET_SDK_VERSION)
+    targetSdkVersion Integer.parseInt(project.TARGET_SDK)
     versionCode Integer.parseInt(project.VERSION_CODE)
     versionName project.VERSION_CODE
 
@@ -20,6 +19,7 @@ android {
     buildConfigField "String", "PARSE_TOKEN", "\"YzkWXpZaTrgmyNJ37A2oZ7MzojEgSisiBggtqMxl\""
     buildConfigField "String", "TWITTER_KEY", "\"BAEJBTDRh1dFQYejH8Rpc2Ws9\""
     buildConfigField "String", "TWITTER_SECRET", "\"z3Sc3ZZgPlWsTi1kk5mql3dyzwppoYyQXT8k41ufsCiqVbxoln\""
+    multiDexEnabled true
   }
 
   buildTypes {
@@ -32,22 +32,15 @@ android {
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'com.android.support:recyclerview-v7:23.0.0'
-  compile 'com.android.support:leanback-v17:23.0.0'
-  compile 'com.android.support:appcompat-v7:23.0.0'
+  compile 'com.android.support:recyclerview-v7:25.1.0'
+  compile 'com.android.support:leanback-v17:25.1.0'
+  compile 'com.android.support:appcompat-v7:25.1.0'
 
   compile 'com.parse:parse-android:1.10.1'
   compile 'com.facebook.android:facebook-android-sdk:4.5.0'
   compile 'com.squareup.retrofit:retrofit:1.9.0'
   compile 'com.squareup.picasso:picasso:2.5.2'
   compile 'com.jakewharton:butterknife:7.0.1'
-
-  compile "org.parceler:parceler-api:1.0.3"
-  apt "org.parceler:parceler:1.0.3"
-
-  compile 'com.sora.util.akatsuki:akatsuki-api:0.0.1'
-  apt 'com.sora.util.akatsuki:akatsuki-compiler:0.0.1'
-  compile 'com.sora.util.akatsuki:akatsuki-parceler:0.0.1@aar'
 
   debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
   releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
